deploy/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: roam-sa
      containers:
        - name: api
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/activity_tracker_api
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: gcp-pull-secret
